--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 .announcement-bar-slider button img {
     width: 60%;
     height: auto;
@@ -69,9 +76,15 @@ slideshow-component .slider-counter__link--dots .dot {
 }
 
 .quick-add button {
+    background: -webkit-gradient(linear, left top, right top, from(rgba(103, 0, 192, 1)), to(rgba(1, 0, 1, 1))) !important;
+    background: -o-linear-gradient(left, rgba(103, 0, 192, 1), rgba(1, 0, 1, 1) 100%) !important;
     background: linear-gradient(90deg, rgba(103, 0, 192, 1), rgba(1, 0, 1, 1) 100%) !important;
     color: #ffffff !important;
+    min-width: -webkit-fit-content;
+    min-width: -moz-fit-content;
     min-width: fit-content;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
     padding: 10px 55px;
     font-size: 1rem;
@@ -150,28 +163,42 @@ slideshow-component .slider-counter__link--dots .dot {
 .deal-of-the-day-container .background-image {
     height: 100%;
     width: 100%;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 
 
 .deal-of-the-day-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
     width: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
 }
 
 .deal-of-the-day-products {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: 10px;
 }
 
 .deal-of-the-day-container .card--media {
-    flex-direction: column !important;
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
 }
 
 .deal-of-the-day-container .card-wrapper {
@@ -201,7 +228,8 @@ slideshow-component .slider-counter__link--dots .dot {
 }
 
 .card-wrapper {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     overflow: hidden;
     background-color: #fff
@@ -213,10 +241,19 @@ slideshow-component .slider-counter__link--dots .dot {
 }
 
 .deal-of-the-day-text-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
     height: 470px;
     width: 25%;
 }
@@ -274,16 +311,28 @@ slideshow-component .slider-counter__link--dots .dot {
 .slideshow_media_mobile_image {
     display: none !important;
     width: 100% !important;
+    height: -webkit-fit-content !important;
+    height: -moz-fit-content !important;
     height: fit-content !important;
+    min-height: -webkit-fit-content !important;
+    min-height: -moz-fit-content !important;
     min-height: fit-content !important;
     height: auto !important;
 
 }
 
 .slideshow_media_desktop_image {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
     display: flex !important;
+    height: -webkit-fit-content !important;
+    height: -moz-fit-content !important;
     height: fit-content !important;
+    max-height: -webkit-fit-content !important;
+    max-height: -moz-fit-content !important;
     max-height: fit-content !important;
+    min-height: -webkit-fit-content !important;
+    min-height: -moz-fit-content !important;
     min-height: fit-content !important;
 }
 
@@ -298,6 +347,8 @@ slideshow-component .slider-counter__link--dots .dot {
 .home-all-combos-cta-button,
 .carousel-track .quick-add__submit,
 .newsletter-form__button {
+    -webkit-transition: all ease-in .2s;
+    -o-transition: all ease-in .2s;
     transition: all ease-in .2s;
     border: none !important;
     padding: 10px 55px !important;
@@ -324,9 +375,13 @@ slideshow-component .slider-counter__link--dots .dot {
 
 .footer-block__newsletter {
     padding: 2rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: 10px;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .footer__content-top {
@@ -362,6 +417,8 @@ slideshow-component .slider-counter__link--dots .dot {
 }
 
 .newsletter-form__button {
+    width: -webkit-fit-content !important;
+    width: -moz-fit-content !important;
     width: fit-content !important;
     padding: 0 3rem;
     background-color: #FF9D00 !important;
@@ -425,6 +482,8 @@ slideshow-component .slider-counter__link--dots .dot {
 }
 
 .footer-block {
+    width: -webkit-fit-content !important;
+    width: -moz-fit-content !important;
     width: fit-content !important;
 }
 
@@ -433,11 +492,18 @@ slideshow-component .slider-counter__link--dots .dot {
 }
 
 .footer__content-top {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
     display: flex !important;
-    flex-direction: column-reverse !important;
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: reverse !important;
+        -ms-flex-direction: column-reverse !important;
+            flex-direction: column-reverse !important;
 }
 
 .footer-gototop {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: 10px;
     padding: 1.5rem 2rem;
@@ -446,8 +512,12 @@ slideshow-component .slider-counter__link--dots .dot {
     background: #625C69;
     border: none;
     color: #fff;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     font-size: 1rem;
 }
 
@@ -457,10 +527,16 @@ slideshow-component .slider-counter__link--dots .dot {
 }
 
 .footer__copyright {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     width: 100%;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .header__menu-item span {
@@ -473,12 +549,16 @@ slideshow-component .slider-counter__link--dots .dot {
 
 .header__icon .svg-wrapper,
 .header__icon {
+    width: -webkit-fit-content !important;
+    width: -moz-fit-content !important;
     width: fit-content !important;
     height: auto !important;
 }
 
 .header__search {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .header__icon--cart {
@@ -488,28 +568,39 @@ slideshow-component .slider-counter__link--dots .dot {
 .header__icons img {
     width: 50px;
     aspect-ratio: 79 / 38;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
     margin-bottom: -3px;
 }
 
 .header__icons {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .header-categories-container {
     background-color: #FBF4FF;
     padding-top: 12px;
     padding-bottom: 8px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     gap: 40px;
     overflow-x: auto;
 }
 
 .collection-categories-container {
     background-color: #FBF4FF;
-    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.4);
+            box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.4);
     position: relative;
 }
 
@@ -532,9 +623,15 @@ slideshow-component .slider-counter__link--dots .dot {
 .collection-categories-container .page-width {
     padding-top: 20px;
     padding-bottom: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: start;
-    align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     gap: 30px;
     text-decoration: none;
 }
@@ -547,7 +644,9 @@ slideshow-component .slider-counter__link--dots .dot {
     position: absolute;
     bottom: -39px;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
     width: 43px;
     height: auto;
     background: transparent;
@@ -574,6 +673,8 @@ slideshow-component .slider-counter__link--dots .dot {
     right: -2px;
     bottom: -2px;
     left: -2px;
+    background: -webkit-gradient(linear, left top, right top, from(rgba(255, 201, 62, 1)), to(rgba(176, 65, 255, 1)));
+    background: -o-linear-gradient(left, rgba(255, 201, 62, 1), rgba(176, 65, 255, 1) 100%);
     background: linear-gradient(90deg, rgba(255, 201, 62, 1), rgba(176, 65, 255, 1) 100%);
     z-index: -1;
     border-radius: 5000px;
@@ -585,11 +686,20 @@ slideshow-component .slider-counter__link--dots .dot {
 }
 
 .collection-circle-category {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     gap: 3px;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .collection-categories-container .collection-circle-category:not(.active) {
@@ -621,11 +731,20 @@ slideshow-component .slider-counter__link--dots .dot {
 }
 
 .header-category {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     gap: 3px;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .header-category img {
@@ -642,25 +761,44 @@ slideshow-component .slider-counter__link--dots .dot {
 }
 
 .images-carousel-home {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
     width: 100%;
+    min-height: -webkit-fit-content;
+    min-height: -moz-fit-content;
     min-height: fit-content;}
 
 .images-carousel-home img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    max-height: -webkit-fit-content;
+    max-height: -moz-fit-content;
     max-height: fit-content;
+    height: -webkit-fit-content !important;
+    height: -moz-fit-content !important;
     height: fit-content !important;
+    min-height: -webkit-fit-content;
+    min-height: -moz-fit-content;
     min-height: fit-content;
 }
 
 sticky-header {
-    box-shadow: 0px -3px 6px 0px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px -3px 6px 0px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px -3px 6px 0px rgba(0, 0, 0, 0.2);
 }
 
 .facets-wrapper--no-filters {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .collection_active_category_name,
@@ -678,7 +816,8 @@ sticky-header {
 
 .facet-filters__field {
     background-color: #F8F8F8;
-    box-shadow: inset 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: inset 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+            box-shadow: inset 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
     padding: 1.1rem 1.5rem;
     border-radius: 520px;
 }
@@ -711,14 +850,27 @@ sticky-header {
 }
 
 .rating-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     gap: 3px;
 }
 
 .rating-star::before {
     content: '★★★★★';
+    background: -webkit-gradient(linear,
+            left top, right top,
+            from(#FFB800),
+            to(rgba(0, 0, 0, 0.15)));
+    background: -o-linear-gradient(left,
+            #FFB800 var(--percent),
+            rgba(0, 0, 0, 0.15) var(--percent));
     background: linear-gradient(90deg,
             #FFB800 var(--percent),
             rgba(0, 0, 0, 0.15) var(--percent));
@@ -737,6 +889,8 @@ sticky-header {
 }
 
 .desktop-usp-right-container {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
     display: flex !important;
 }
 
@@ -746,11 +900,18 @@ sticky-header {
 
 .product-info-fold-left-container variant-selects fieldset {
     border: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: 10px;
-    flex-wrap: wrap;
-    justify-content: start;
-    align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 0;
     margin: 0 0 0;
 }
@@ -770,17 +931,31 @@ sticky-header {
     }
 
     .deal-of-the-day-content {
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         gap: 30px;
     }
 
     .deal-of-the-day-text-container {
         width: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        height: -webkit-fit-content;
+        height: -moz-fit-content;
         height: fit-content;
-        align-items: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
 
     .deal-of-the-day-container {
@@ -788,10 +963,19 @@ sticky-header {
     }
 
     .deal-of-the-day-text {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
 
     .deal-of-the-day-text-container img {
@@ -803,8 +987,12 @@ sticky-header {
 
     .deal-of-the-day-products {
         width: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: start;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: start;
         padding: 0 20px;
         overflow-x: auto;
         scrollbar-width: none;
@@ -823,6 +1011,8 @@ sticky-header {
     }
 
     .mobile-usp-right-container {
+        display: -webkit-box !important;
+        display: -ms-flexbox !important;
         display: flex !important;
     }
 
@@ -851,6 +1041,8 @@ sticky-header {
     .deal-of-the-day-heading,
     .deal-of-the-day-heading-2,
     .deal-of-the-day-subheading {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
     }
 
@@ -910,14 +1102,20 @@ sticky-header {
     }
 
     .header-categories-container {
-        justify-content: start;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: start;
         padding: 10px 10px 5px;
         gap: 20px;
-        align-items: start;
+        -webkit-box-align: start;
+            -ms-flex-align: start;
+                align-items: start;
     }
 
     .collection-categories-container .page-width {
-        justify-content: start;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: start;
         padding: 20px 10px;
         gap: 20px;
         overflow-x: auto;
@@ -985,6 +1183,8 @@ sticky-header {
     }
 
     .slideshow_media_mobile_image {
+        display: -webkit-box !important;
+        display: -ms-flexbox !important;
         display: flex !important;
     }
 
@@ -1010,6 +1210,8 @@ sticky-header {
 }
 
 .newsletter-form {
+    width: -webkit-fit-content !important;
+    width: -moz-fit-content !important;
     width: fit-content !important;
     margin-left: -37px !important;
 }
@@ -1049,11 +1251,11 @@ sticky-header {
 }
 
 .footer__blocks-wrapper {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
     display: flex !important;
-    flex-wrap: wrap !important;
-}
-
-
+    -ms-flex-wrap: wrap !important;
+        flex-wrap: wrap !important;
 }
 
 @media(max-width:500px) {
