--- a/assets/base.css
+++ b/assets/base.css
@@ -1124,7 +1124,7 @@ summary::-webkit-details-marker {
 
 .media>*:not(.zoom):not(.deferred-media__poster-button),
 .media model-viewer {
-  display: block;
+  display: flex;
   max-width: 100%;
   /* position: absolute;
   top: 0;
