--- a/assets/custom.css
+++ b/assets/custom.css
@@ -164,7 +164,7 @@ slideshow-component .slider-counter__link--dots .dot {
     height: 100%;
     width: 100%;
     -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
 }
 
 
@@ -173,18 +173,18 @@ slideshow-component .slider-counter__link--dots .dot {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
+    -ms-flex-align: start;
+    align-items: start;
     width: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 .deal-of-the-day-products {
@@ -197,8 +197,8 @@ slideshow-component .slider-counter__link--dots .dot {
 .deal-of-the-day-container .card--media {
     -webkit-box-orient: vertical !important;
     -webkit-box-direction: normal !important;
-        -ms-flex-direction: column !important;
-            flex-direction: column !important;
+    -ms-flex-direction: column !important;
+    flex-direction: column !important;
 }
 
 .deal-of-the-day-container .card-wrapper {
@@ -229,7 +229,7 @@ slideshow-component .slider-counter__link--dots .dot {
 
 .card-wrapper {
     -webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     overflow: hidden;
     background-color: #fff
@@ -246,14 +246,14 @@ slideshow-component .slider-counter__link--dots .dot {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
+    -ms-flex-align: start;
+    align-items: start;
     height: 470px;
     width: 25%;
 }
@@ -380,8 +380,8 @@ slideshow-component .slider-counter__link--dots .dot {
     display: flex;
     gap: 10px;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
 }
 
 .footer__content-top {
@@ -497,8 +497,8 @@ slideshow-component .slider-counter__link--dots .dot {
     display: flex !important;
     -webkit-box-orient: vertical !important;
     -webkit-box-direction: reverse !important;
-        -ms-flex-direction: column-reverse !important;
-            flex-direction: column-reverse !important;
+    -ms-flex-direction: column-reverse !important;
+    flex-direction: column-reverse !important;
 }
 
 .footer-gototop {
@@ -513,11 +513,11 @@ slideshow-component .slider-counter__link--dots .dot {
     border: none;
     color: #fff;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     font-size: 1rem;
 }
 
@@ -531,12 +531,12 @@ slideshow-component .slider-counter__link--dots .dot {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     width: 100%;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .header__menu-item span {
@@ -557,8 +557,8 @@ slideshow-component .slider-counter__link--dots .dot {
 
 .header__search {
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .header__icon--cart {
@@ -576,8 +576,8 @@ slideshow-component .slider-counter__link--dots .dot {
 
 .header__icons {
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .header-categories-container {
@@ -588,11 +588,11 @@ slideshow-component .slider-counter__link--dots .dot {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     gap: 40px;
     overflow-x: auto;
 }
@@ -600,7 +600,7 @@ slideshow-component .slider-counter__link--dots .dot {
 .collection-categories-container {
     background-color: #FBF4FF;
     -webkit-box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.4);
-            box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.4);
     position: relative;
 }
 
@@ -627,11 +627,11 @@ slideshow-component .slider-counter__link--dots .dot {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: start;
+    -ms-flex-pack: start;
+    justify-content: start;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     gap: 30px;
     text-decoration: none;
 }
@@ -645,8 +645,8 @@ slideshow-component .slider-counter__link--dots .dot {
     bottom: -39px;
     left: 50%;
     -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-            transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
     width: 43px;
     height: auto;
     background: transparent;
@@ -691,15 +691,15 @@ slideshow-component .slider-counter__link--dots .dot {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     gap: 3px;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .collection-categories-container .collection-circle-category:not(.active) {
@@ -736,15 +736,15 @@ slideshow-component .slider-counter__link--dots .dot {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     gap: 3px;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .header-category img {
@@ -767,7 +767,8 @@ slideshow-component .slider-counter__link--dots .dot {
     width: 100%;
     min-height: -webkit-fit-content;
     min-height: -moz-fit-content;
-    min-height: fit-content;}
+    min-height: fit-content;
+}
 
 .images-carousel-home img {
     display: -webkit-box;
@@ -786,7 +787,7 @@ slideshow-component .slider-counter__link--dots .dot {
 
 sticky-header {
     -webkit-box-shadow: 0px -3px 6px 0px rgba(0, 0, 0, 0.2);
-            box-shadow: 0px -3px 6px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px -3px 6px 0px rgba(0, 0, 0, 0.2);
 }
 
 .facets-wrapper--no-filters {
@@ -794,11 +795,11 @@ sticky-header {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .collection_active_category_name,
@@ -817,7 +818,7 @@ sticky-header {
 .facet-filters__field {
     background-color: #F8F8F8;
     -webkit-box-shadow: inset 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
-            box-shadow: inset 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
     padding: 1.1rem 1.5rem;
     border-radius: 520px;
 }
@@ -854,11 +855,11 @@ sticky-header {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     gap: 3px;
 }
 
@@ -905,13 +906,13 @@ sticky-header {
     display: flex;
     gap: 10px;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: start;
+    -ms-flex-pack: start;
+    justify-content: start;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     padding: 0;
     margin: 0 0 0;
 }
@@ -933,8 +934,8 @@ sticky-header {
     .deal-of-the-day-content {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
         gap: 30px;
     }
 
@@ -945,17 +946,17 @@ sticky-header {
         display: flex;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
         -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
         height: -webkit-fit-content;
         height: -moz-fit-content;
         height: fit-content;
         -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
     }
 
     .deal-of-the-day-container {
@@ -968,14 +969,14 @@ sticky-header {
         display: flex;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
         -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
         -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
     }
 
     .deal-of-the-day-text-container img {
@@ -991,8 +992,8 @@ sticky-header {
         display: -ms-flexbox;
         display: flex;
         -webkit-box-pack: start;
-            -ms-flex-pack: start;
-                justify-content: start;
+        -ms-flex-pack: start;
+        justify-content: start;
         padding: 0 20px;
         overflow-x: auto;
         scrollbar-width: none;
@@ -1006,10 +1007,17 @@ sticky-header {
 }
 
 @media(max-width:750px) {
-    #shopify-section-template--23799476715830__slideshow_VzBdWB .slideshow_media_mobile_image{
-aspect-ratio: 412/549 !important;
-height: auto !important;
+
+    #shopify-section-template--23799476715830__slideshow_VzBdWB .slideshow_media_mobile_image,
+    #shopify-section-template--23799476715830__slideshow_VzBdWB .slideshow_media_mobile_image img {
+        aspect-ratio: 412/549 !important;
+        height: auto !important;
     }
+#shopify-section-template--23925777301814__slideshow_iHhrW6 .slideshow_media_mobile_image,
+#shopify-section-template--23925777301814__slideshow_iHhrW6 .slideshow_media_mobile_image img{
+    aspect-ratio: 206/165 !important;
+    height: auto !important;
+}
     .announcement-bar__message {
         padding: .65rem 0 !important;
     }
@@ -1107,19 +1115,19 @@ height: auto !important;
 
     .header-categories-container {
         -webkit-box-pack: start;
-            -ms-flex-pack: start;
-                justify-content: start;
+        -ms-flex-pack: start;
+        justify-content: start;
         padding: 10px 10px 5px;
         gap: 20px;
         -webkit-box-align: start;
-            -ms-flex-align: start;
-                align-items: start;
+        -ms-flex-align: start;
+        align-items: start;
     }
 
     .collection-categories-container .page-width {
         -webkit-box-pack: start;
-            -ms-flex-pack: start;
-                justify-content: start;
+        -ms-flex-pack: start;
+        justify-content: start;
         padding: 20px 10px;
         gap: 20px;
         overflow-x: auto;
@@ -1259,7 +1267,7 @@ height: auto !important;
     display: -ms-flexbox !important;
     display: flex !important;
     -ms-flex-wrap: wrap !important;
-        flex-wrap: wrap !important;
+    flex-wrap: wrap !important;
 }
 
 @media(max-width:500px) {
