--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1019,6 +1019,7 @@ sticky-header {
     #shopify-section-template--23925777301814__slideshow_iHhrW6 .slider__slide {
         aspect-ratio: 206/165 !important;
         height: auto !important;
+        height: fit-content !important;
     }
 
     .announcement-bar__message {
