--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1016,7 +1016,8 @@ sticky-header {
 
     #shopify-section-template--23925777301814__slideshow_iHhrW6 .slideshow_media_mobile_image,
     #shopify-section-template--23925777301814__slideshow_iHhrW6 .slideshow_media_mobile_image img,
-    #shopify-section-template--23925777301814__slideshow_iHhrW6 .slider__slide {
+    #shopify-section-template--23925777301814__slideshow_iHhrW6 .slideshow_media_mobile_image img,
+    #shopify-section-template--23925777301814__slideshow_iHhrW6 .slideshow.banner {
         aspect-ratio: 206/165 !important;
         height: auto !important;
         height: fit-content !important;
