--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1017,6 +1017,7 @@ sticky-header {
     #shopify-section-template--23925777301814__slideshow_iHhrW6 .slideshow_media_mobile_image,
     #shopify-section-template--23925777301814__slideshow_iHhrW6 .slideshow_media_mobile_image img,
     #shopify-section-template--23925777301814__slideshow_iHhrW6 .slideshow_media_mobile_image img,
+    #shopify-section-template--23925777301814__slideshow_iHhrW6 .images-carousel-home,
     #shopify-section-template--23925777301814__slideshow_iHhrW6 .slideshow.banner {
         aspect-ratio: 206/165 !important;
         height: auto !important;
