--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1013,7 +1013,7 @@ sticky-header {
     #shopify-section-template--23799476715830__slideshow_VzBdWB .slideshow.banner,
     #shopify-section-template--23799476715830__slideshow_VzBdWB .slideshow_media_mobile_image img {
         aspect-ratio: 412/549 !important;
-        height: fit-content !important;
+        height: max-content !important;
     }
 
     #shopify-section-template--23925777301814__slideshow_iHhrW6 .slideshow_media_mobile_image,
@@ -1021,7 +1021,7 @@ sticky-header {
     #shopify-section-template--23925777301814__slideshow_iHhrW6 .images-carousel-home,
     #shopify-section-template--23925777301814__slideshow_iHhrW6 .slideshow.banner {
         aspect-ratio: 206/165 !important;
-        height: fit-content !important;
+        height: max-content !important;
     }
 
     .announcement-bar__message {
