--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1011,6 +1011,7 @@ sticky-header {
     #shopify-section-template--23799476715830__slideshow_VzBdWB .slideshow_media_mobile_image,
     #shopify-section-template--23799476715830__slideshow_VzBdWB .images-carousel-home,
     #shopify-section-template--23799476715830__slideshow_VzBdWB .slideshow.banner,
+    #shopify-section-template--23799476715830__slideshow_VzBdWB .slider__slide,
     #shopify-section-template--23799476715830__slideshow_VzBdWB .slideshow_media_mobile_image img {
         aspect-ratio: 412/549 !important;
         height: max-content !important;
