--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1008,6 +1008,7 @@ sticky-header {
 
 @media(max-width:750px) {
 
+    #shopify-section-template--23799476715830__slideshow_VzBdWB,
     #shopify-section-template--23799476715830__slideshow_VzBdWB .slideshow_media_mobile_image,
     #shopify-section-template--23799476715830__slideshow_VzBdWB .images-carousel-home,
     #shopify-section-template--23799476715830__slideshow_VzBdWB .slideshow.banner,
