--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1019,7 +1019,10 @@ sticky-header {
         min-height: max-content !important;
     }
 
-    #shopify-section-template--23799476715830__slideshow_VzBdWB .slideshow.banner {
+    #shopify-section-template--23799476715830__slideshow_VzBdWB .slider__slide {
+        position: relative;
+    }
+    #shopify-section-template--23799476715830__slideshow_VzBdWB .slideshow_media_mobile_image{
         position: absolute;
         top: 0;
         bottom: 0;
