--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -196,6 +196,32 @@
             {%- endif -%}
           {%- endif -%}
         </div>
+        {%- if block.settings.button_label != blank -%}
+          <div class="banner__buttons">
+            <a
+              {% if block.settings.link %}
+                href="{{ block.settings.link }}"
+              {% else %}
+                role="link" aria-disabled="true"
+              {% endif %}
+              class="button {% if block.settings.button_style_secondary %}button--secondary{% else %}button--primary{% endif %}"
+            >
+              {{- block.settings.button_label | escape -}}
+            </a>
+          </div>
+        {%- endif -%}
+        <style>
+          slideshow-component .slideshow .slideshow__slide .banner__buttons {
+            position: absolute;
+            bottom: 30px;
+            left: 50%;
+            transform: translateX(-50%);
+            text-wrap: nowrap;
+            display: flex;
+            z-index: 9;
+            width: fit-content;
+          }
+        </style>
         {% comment %}
           <div class="slideshow__text-wrapper banner__content banner__content--{{ block.settings.box_align }} page-width{% if block.settings.show_text_box == false %} banner--desktop-transparent{% endif %}{% if settings.animations_reveal_on_scroll and forloop.index == 1 %} scroll-trigger animate--slide-in{% endif %}">
             <div class="slideshow__text banner__box content-container content-container--full-width-mobile color-{{ block.settings.color_scheme }} gradient slideshow__text--{{ block.settings.text_alignment }} slideshow__text-mobile--{{ block.settings.text_alignment_mobile }}">
@@ -209,20 +235,7 @@
                   <p>{{ block.settings.subheading }}</p>
                 </div>
               {%- endif -%}
-              {%- if block.settings.button_label != blank -%}
-                <div class="banner__buttons">
-                  <a
-                    {% if block.settings.link %}
-                      href="{{ block.settings.link }}"
-                    {% else %}
-                      role="link" aria-disabled="true"
-                    {% endif %}
-                    class="button {% if block.settings.button_style_secondary %}button--secondary{% else %}button--primary{% endif %}"
-                  >
-                    {{- block.settings.button_label | escape -}}
-                  </a>
-                </div>
-              {%- endif -%}
+
             </div>
           </div>
         {% endcomment %}
@@ -432,7 +445,6 @@
     {
       "type": "slide",
       "name": "t:sections.slideshow.blocks.slide.name",
-      "limit": 5,
       "settings": [
         {
           "type": "image_picker",
